--- a/App.xaml
+++ b/App.xaml
@@ -2,8 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             xmlns:converters="clr-namespace:InazumaElevenVRSaveEditor.Common.Converters"
-             StartupUri="MainWindow.xaml">
+             xmlns:converters="clr-namespace:InazumaElevenVRSaveEditor.Common.Converters">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
