--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,12 +7,14 @@
         xmlns:updatesViews="clr-namespace:InazumaElevenVRSaveEditor.Features.Updates.Views"
         Title="Inazuma Eleven VR - Save Editor"
         Height="1000"
-        Width="1300"
+        Width="1275"
         WindowStartupLocation="CenterScreen"
         WindowStyle="None"
-        ResizeMode="CanResize"
+        ResizeMode="NoResize"
         Background="{DynamicResource MaterialDesignPaper}"
-        FontFamily="{DynamicResource MaterialDesignFont}">
+        FontFamily="{DynamicResource MaterialDesignFont}"
+        StateChanged="Window_StateChanged"
+        LocationChanged="Window_LocationChanged">
 
     <Window.Resources>
         <!-- Ring Gradient for Theme Transition - hides old theme in expanding circle -->
@@ -232,7 +234,6 @@
                         <StackPanel>
                             <CheckBox x:Name="LoadingScreenCheckBox"
                                      Content="Show Loading Screen"
-                                     IsChecked="True"
                                      Checked="LoadingScreenCheckBox_Changed"
                                      Unchecked="LoadingScreenCheckBox_Changed"
                                      Margin="5"
@@ -282,9 +283,9 @@
                             Visibility="{Binding MemoryEditor.SelectedTool, Converter={StaticResource EqualToVisibilityConverter}, ConverterParameter=inaflowers}"
                             DataContext="{Binding}"/>
 
-                        <!-- Spirits Editor View -->
-                        <memoryEditorViews:SpiritsEditorControl
-                            Visibility="{Binding MemoryEditor.SelectedTool, Converter={StaticResource EqualToVisibilityConverter}, ConverterParameter=spirits}"
+                        <!-- Spirit Cards Adder View (replaces old Spirits Editor) -->
+                        <memoryEditorViews:SpiritCardsAdderControl
+                            Visibility="{Binding MemoryEditor.SelectedTool, Converter={StaticResource EqualToVisibilityConverter}, ConverterParameter=spiritcards}"
                             DataContext="{Binding}"/>
 
                         <!-- Beans Editor View -->
